...
          Center(
            child: Column(
              mainAxisAlignment: MainAxisAlignment.center,
              children: [
                Text(
                  'pomodoro',
                  key: const Key('pomodoro_title'),
                  style: TextStyle(
                      fontSize: AppTextStyles.title,
                      color: AppColors.lightBlueGray,
                      fontWeight: FontWeight.bold),
                ),
                Flexible(
...
