...
  final bool isTablet;

  @override
  Widget build(BuildContext context) {
    return isTablet
        ? Row(
            key: const Key('timeSection'),
            children: [
              Expanded(
                child: _buildNumberInput(
                  TimerMode.pomodoro,
                  staged.staged.initPomodoro,
                  staged.staged.debugMode ? 0 : 25,
...
